# docintel_agent

./: README.md  app.py  doc_loader.py  eval_logs.jsonl  long_term_memory.json  main.py  pyproject.toml  qa_chain.py  requirements.txt  vector_store.py
eval_tools/: __init__.py  critic.py  diagnostics.py  generation.py  logger.py  plot.py  retrieval.py
