[project]
name = "docintel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.1",
    "bert-score>=0.3.13",
    "docx2txt>=0.9",
    "evaluate>=0.4.5",
    "plotly>=6.2.0",
    "ragas>=0.3.0",
    "rouge-score>=0.1.2",
    "trulens-eval>=1.5.3",
]
