[project]
name = "docintel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Core dependencies
    "streamlit==1.35.0",
    "langchain==0.2.3",
    "langchain-google-genai==1.0.2",
    "python-dotenv==1.1.0",

    # Embeddings + Vector Store
    "faiss-cpu==1.7.4",
    "sentence-transformers==2.6.1",
    "scikit-learn==1.1.3",

    # File loaders
    "PyMuPDF==1.24.3",
    "docx2txt>=0.9",

    # Evaluation
    "evaluate>=0.4.5",
    "bert-score>=0.3.13",

    # LLM + Tokenizer
    "transformers==4.41.2",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",

    # Extra packages
    "absl-py>=2.3.1",
    "plotly>=6.2.0",
    "ragas>=0.3.0",
    "rouge-score>=0.1.2",
    "trulens-eval>=1.5.3"
]
